[package]
name = "hellingerforest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hellingerforest"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21.0"
ndarray = "0.15"
rayon = "1.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
itertools = "0.10"
smallvec = "1.11"

[package.metadata.maturin]
rustflags = ["-C", "opt-level=3"]
name = "hellingerforest"
